# OpenMedSeg

./: .gitignore  LICENSE  README.md  pyproject.toml  目录结构.md
datasets/: README.md
my_lib/: __init__.py
my_lib/models/: __init__.py
my_lib/models/segmentors/: __init__.py  unet.py
my_lib/test/: __init__.py  common_test.py  load_test_dataset.py  train_config.py  unet.py  unet_plus_plus.py
